--- a/docs/manual/source/02_noauth_funcs/index.tex
+++ b/docs/manual/source/02_noauth_funcs/index.tex
@@ -72,6 +72,7 @@
                         (\ref{sec:page_faq})
                 \end{enumerate}
             \subsubsection{Обратная связь.}
+                \label{sec:fbf}
                 См. рис. \ref{fig:common_items_3}
 
                 \begin{enumerate}
