--- a/docs/manual/source/08_usecases/index.tex
+++ b/docs/manual/source/08_usecases/index.tex
@@ -1,1 +1,46 @@
 \chapter{Типовые сценарии поведения пользователя}
+
+    \section{Сценарии неавторизованного пользователя}
+
+        \subsection{Выбор поощрения по фильтру на главной}
+        \subsection{Выбор поощрения по фильтру в разделах каталога}
+        \subsection{Просмотр правил <<как это работает>>}
+        \subsection{Просмотр правил <<Адреса>>}
+        \subsection{Просмотр правил <<FAQ>>}
+        \subsection{Написание сообщения в форме обратной связи.}
+
+     \section{Сценарии авторизованного пользователя}
+
+        \subsection{Авторизация.}
+        \subsection{Заказ поощрения}
+        \subsection{Размещение отзыва с оценкой.}
+        \subsection{Просмотр отзывов.}
+        \subsection{Просмотр своих заказов.}
+        \subsection{Отмена заказа.}
+        \subsection{Печать купона для заказанного поощрения.}
+        \subsection{Связь с администрацией по вопросу конкретного заказа.}
+        \subsection{Просмотр своих баллов.}
+        \subsection{Добавление поощрения в желания.}
+        \subsection{Просмотр своих желаний.}
+        \subsection{Удаление поощрения из желаний.}
+
+    \section{Сценарии редактора контента}
+
+        \subsection{Редактирование правил <<как это работает>>}
+        \subsection{Редактирование пункта правил <<FAQ>>}
+        \subsection{Добавление пункта правил <<FAQ>>}
+        \subsection{Просмотр обращений через \gloss{FBF}}
+
+    \section{Сценарии администратора магазина}
+
+        \subsection{Добавление поиск пользователя в списке}
+        \subsection{Редактирование информации групп пользователя.}
+
+    \section{Сценарии администратора \gloss{UNF}}
+
+        \subsection{Выгрузка каталога \gloss{UNF} в \gloss{shop}}
+
+
+
+
+
