--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -2,7 +2,7 @@
 word={CMS},
 definition={Система управления контентом. Специальный раздел магазина, 
 предназначенный для манипулирования объектами, отображаемыми на
-сайте. Например банерами, текстом на страницах и пр. Вход защищен 
+ageайте. Например банерами, текстом на страницах и пр. Вход защищен 
 авторизацией и расположен по адресу /bitrix/admin/}
 }
 
@@ -85,7 +85,7 @@ definition={Элемент торгового каталога, принадле
 word={Торговое предложение},
 definition={Элемент торгового каталога, содержащий индивидуальную информацию 
 о конкретной единице поощрения: цена,
-нахождение на объекте типа \gloss{store}, характеристики (цвет, размер и 
+нахождение на объекте типа \gloss{storage}, характеристики (цвет, размер и 
 пр.). Доступно для выбора в разделах 
 \ref{sec:goods_cart_stores} и \ref{sec:goods_cart_props}. Магазин получает 
 информацию о них в результате действия \gloss{import1c}.
@@ -113,7 +113,7 @@ definition={
 @gd{exchange1c,
 word={1С обмен заказами},
 definition={
-Передача из магазина в \gloss{UNF} и из \gloss{UNF} в магазин информации о 
+Передача из \gloss{shop} в \gloss{UNF} и из \gloss{UNF} в \gloss{shop} информации о 
 заказах и изменении их статуса. Осужетсвляется посредством формата XML
 }
 }
@@ -121,7 +121,7 @@ definition={
 @gd{import1c,
 word={1C выгрузка каталога},
 definition={
-Передача из \gloss{UNF} в магазин информации о товарах, предложениях, 
+Передача из \gloss{UNF} в \gloss{shop} информации о товарах, предложениях, 
 складах, складских остатках. 
 Осуществляется передачей архива, состоящего из файлов 
 offers.xml (объекты типа \gloss{offer} и \gloss{storage}), import(объекты 
@@ -173,10 +173,11 @@ definition={
 BXTRANSACT,
 word={Bitrix транзакция},
 definition={
-Акт начисления или списания баллов на внетренний счёт объекту 
+Акт начисления или списания баллов на внутренний счёт объекту 
 \\\gloss{BXUSER} через \gloss{BXAPI}. Задаётся параметрами:
 сумма, направление списания(дебит/кредит), комментарий, ID объекта 
-\gloss{BXORDER}.
+\gloss{BXORDER}. Каждый такой акт имеет аналогичный ему объект
+\gloss{AGTRANSACT}.
 }
 }
 
