--- a/docs/manual/source/08_usecases/index.tex
+++ b/docs/manual/source/08_usecases/index.tex
@@ -2,16 +2,37 @@
 
     \section{Сценарии неавторизованного пользователя}
 
+        \subsection{Выход из авторизации.}
+        \label{sec:usecase_exit}
+            \begin{enumerate}
+                \item Перейти на \gloss{AG} 
+                \item Совершить выход.
+                \item Вернуться на \gloss{shop}
+            \end{enumerate}
+
+    
         \subsection{Выбор поощрения по фильтру на главной}
+        
+        
         \subsection{Выбор поощрения по фильтру в разделах каталога}
+        
         \subsection{Просмотр правил <<как это работает>>}
+        
         \subsection{Просмотр правил <<Адреса>>}
+        
         \subsection{Просмотр правил <<FAQ>>}
+        
         \subsection{Написание сообщения в форме обратной связи.}
 
      \section{Сценарии авторизованного пользователя}
 
         \subsection{Авторизация.}
+            \begin{enumerate}
+                \item Перейти на \gloss{AG} 
+                \item Совершить вход.
+                \item Вернуться на \gloss{shop}
+            \end{enumerate}
+            
         \subsection{Заказ поощрения}
         \subsection{Размещение отзыва с оценкой.}
         \subsection{Просмотр отзывов.}
@@ -34,12 +55,14 @@
     \section{Сценарии администратора магазина}
 
         \subsection{Добавление поиск пользователя в списке}
-        \subsection{Редактирование информации групп пользователя.}
-
-    \section{Сценарии администратора \gloss{UNF}}
-
+        \subsection{Добавление пользователя в группу.}
         \subsection{Выгрузка каталога \gloss{UNF} в \gloss{shop}}
+        \subsection{Обмен заказами между \gloss{UNF} в \gloss{shop}}
 
+
+    \section{Комплексные сценарии.}
+        
+        \subsection{Заказ}
 
 
 
